# leafs-clippers

./: README.md  gen_inipos.py  pyproject.toml  run_tests.sh
src/leafs_clippers/: __about__.py  gen_inipos.py  leafs_tracer.py  prepare_postprocessing.py  rewrite_tracer.py
src/leafs_clippers/ayann/: tracer.py  weakrates.py
src/leafs_clippers/cli/: ayann_tracer_to_csv.py  convert_leafs_to_hdf5.py  gen_inipos.py  make_leafs_plots.py  map_leafs_to_artis.py  prepare_postprocessing.py  process_snapshots.py  rewrite_tracer.py
src/leafs_clippers/data/: artis_radio_isos.json
src/leafs_clippers/leafs/: calibration.py  leafs.py  leafs_legacy.py  leafs_mapping.py  leafs_tracer.py  nucleide_chart.py  nuclide_chart.py  particle_trajectory.py  utils.py
src/leafs_clippers/util/: const.py  mapping.py  radioactivedecay.py  sph.py  utilities.py
tests/: README.md  __init__.py  test_const.py  test_leafs.py  test_leafs_mapping.py  test_leafs_tracer.py  test_leafs_utils.py  test_radioactivedecay.py  test_utilities.py
