[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leafs_clippers"
authors = [
  { name="Alexander Holas", email="alexander.holas@h-its.org" },
]
description = "A collection of scripts and tools to post-process LEAFS-II snapshots"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2.0",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.scripts]
clipper-rewrite-tracer = "leafs_clippers:rewrite_tracer.cli"

[project.urls]
"Homepage" = "https://github.com/AlexHls/leafs-clippers"
"Bug Tracker" = "https://github.com/AlexHls/leafs-clippers/issues"

[tool]
[tool.hatch.version]
path = "src/leafs_clippers/__about__.py"

[tool.hatch.build.target.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.target.wheel]
packages = [
  "src/leafs_clippers",
]

[tool.hatch.build.targets.sdist.force-include]
"bin/clipper-gen-inipos" = "src/leafs_clippers/cli/gen_inipos.py"
"bin/clipper-prepare-pp" = "src/leafs_clippers/cli/prepare_postprocessing.py"
"bin/clipper-rewrite-tracer" = "src/leafs_clippers/rewrite_tracer.py"

[tool.hatch.build.targets.wheel.force-include]
"bin/clipper-gen-inipos" = "src/leafs_clippers/cli/gen_inipos.py"
"bin/clipper-prepare-pp" = "src/leafs_clippers/cli/prepare_postprocessing.py"
"bin/clipper-rewrite-tracer" = "src/leafs_clippers/rewrite_tracer.py"

[project.scripts]
clipper-gen-inipos = "leafs_clippers.cli.gen_inipos:cli"
clipper-prepare-pp = "leafs_clippers.cli.prepare_postprocessing:cli"
clipper-rewrite-tracer = "leafs_clippers.rewrite_tracer:cli"

