[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leafs-clippers"
authors = [
  { name="Alexander Holas", email="alexander.holas@h-its.org" },
]
description = "A collection of scripts and tools to post-process LEAFS-II snapshots"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas",
    "tqdm",
    "progressbar2",
    "mpi4py",
    "parallel_decorators@git+https://github.com/ohlmann/parallel_decorators",
]


[project.urls]
"Homepage" = "https://github.com/AlexHls/leafs-clippers"
"Bug Tracker" = "https://github.com/AlexHls/leafs-clippers/issues"

[tool]
[tool.hatch.version]
path = "src/leafs_clippers/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.target.wheel]
packages = [
  "src/leafs_clippers",
]

[tool.hatch.build.targets.sdist.force-include]
"bin/clipper-gen-inipos" = "src/leafs_clippers/cli/gen_inipos.py"
"bin/clipper-prepare-pp" = "src/leafs_clippers/cli/prepare_postprocessing.py"
"bin/clipper-rewrite-tracer" = "src/leafs_clippers/cli/rewrite_tracer.py"
"bin/clipper-ayann-tocsv" = "src/leafs_clippers/cli/ayann_tracer_to_csv.py"
"bin/clipper-convert-tohdf5" = "src/leafs_clippers/cli/convert_leafs_to_hdf5.py"
"bin/clipper-make-plots" = "src/leafs_clippers/cli/make_leafs_plots.py"
"bin/clipper-leafs-to-artis" = "src/leafs_clippers/cli/map_leafs_to_artis.py"
"bin/clipper-process-snapshots" = "src/leafs_clippers/cli/process_snapshots.py"

[tool.hatch.build.targets.wheel.force-include]
#"bin/clipper-gen-inipos" = "src/leafs_clippers/cli/gen_inipos.py"
#"bin/clipper-prepare-pp" = "src/leafs_clippers/cli/prepare_postprocessing.py"
#"bin/clipper-rewrite-tracer" = "src/leafs_clippers/cli/rewrite_tracer.py"
#"bin/clipper-ayann-tocsv" = "src/leafs_clippers/cli/ayann_tracer_to_csv.py"

[project.scripts]
clipper-gen-inipos = "leafs_clippers.cli.gen_inipos:cli"
clipper-prepare-pp = "leafs_clippers.cli.prepare_postprocessing:cli"
clipper-rewrite-tracer = "leafs_clippers.cli.rewrite_tracer:cli"
clipper-ayann-tocsv = "leafs_clippers.cli.ayann_tracer_to_csv:cli"
clipper-convert-tohdf5 = "leafs_clippers.cli.convert_leafs_to_hdf5:cli"
clipper-make-plots = "leafs_clippers.cli.make_leafs_plots:cli"
clipper-leafs-to-artis = "leafs_clippers.cli.map_leafs_to_artis:cli"
clipper-process-snapshots = "leafs_clippers.cli.process_snapshots:cli"

[tool.setuptools.package-data]
"leafs_clippers.data" = ["*.json"]
